media query to prevent hover animation on mobile

--- a/stylesheet/styles.css
+++ b/stylesheet/styles.css
@@ -137,6 +137,7 @@ main {
 .projectsbox {
     text-align: center;
     width: 90vw;
+    margin-top: 15px;
 }
 .skills {
     margin-top: 50px;
@@ -219,6 +220,12 @@ h3 {
     font-size: 25px;
     font-weight: bold;
 }
+@media only screen and (min-width: 450px){
+    
+    .devicon-git-plain:hover{
+        top: -10px;
+    }
+} 
 .devicon-git-plain {
     max-width: 3em;
     margin: 3 .5em 0 .5em;
@@ -227,9 +234,6 @@ h3 {
     top: 0;
     transition: top ease 0.5s;
 }  
-.devicon-git-plain:hover{
-    top: -10px;
-} 
 .techStack {
     margin-top: auto;
     width: 100%;
